feat: new font / images

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -13,6 +13,7 @@
   --background: #0e0e0f;
   --topground: #1b1b1e;
   --hover-topground: #262629;
+  --cards-bg: #212123;
 
   --white: #ffffff;
 
@@ -22,4 +23,6 @@
   --contrast-accent: #d3f26a;
 
   --orange: #FF6147;
+  --toxic-green: #D3F26A;
+  --toxic-green-hovered: #c2e060;
 }
