--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
-
 @mixin font($family, $filePath, $weight: normal, $style: normal) {
   @font-face {
     font-family: $family;
@@ -17,3 +15,6 @@
 @include font('NT Somic', '/fonts/NT_somic/NTSomic-Regular', 400);
 @include font('NT Somic', '/fonts/NT_somic/NTSomic-Medium', 500);
 @include font('NT Somic', '/fonts/NT_somic/NTSomic-Bold', 700);
+
+
+@include font('SF Pro Expanded', '/fonts/SF-ProExpanded/SF-ProExpanded', 400);
